--- a/loginPage.html
+++ b/loginPage.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="form">
           <h1>User Login</h1> 
-          <p>Doesn't have an account yet ? <a href="#" style="color:rgb(30, 107, 183)"><strong>Sign Up</strong></a></p>    
+          <p>Doesn't have an account yet ?<a href="#" style="color:rgb(30, 107, 183)"><strong>Register here</strong></a></p>    
           <hr>       
           <form onsubmit= "return validateForm()">
               <div class="field email">
@@ -38,7 +38,7 @@
               <!-- <input type="submit" value="Login" >
               <input type="submit" value="Register"> -->
               <div class="loginPage">
-                <button type="submit" class="Loginbtn" >Login</button>
+                <button type="submit" class="Loginbtn" ><a href="./homePage.html">Login</a></button>
                 <a href="./registrationForm.html"type="submit" class="Regbtn" id="register">Register</a>
               </div>
          
